--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Effective Solutions for Your Business</title>
 
-    <!-- font-family -->
+    <!-- Font-family -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,45 +15,57 @@
       rel="stylesheet"
     />
 
-    <!-- styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
+    <!-- Styles -->
 
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
   <body>
     <!-- Navigation -->
-    <header>
+
+    <header class="header">
       <nav class="nav">
-        <a class="logo" href="./index.html"
-          ><span class="accent">Web</span>Studio</a
-        >
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contacts</a>
-          </li>
-        </ul>
+        <div class="container">
+          <a class="logo" href="./index.html"
+            ><span class="accent">Web</span>Studio</a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </div>
       </nav>
 
       <!-- Address -->
 
       <address>
-        <ul class="address-list">
-          <li class="address-item">
-            <a class="address-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a class="address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="address-list">
+            <li class="address-item">
+              <a class="address-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="address-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </div>
       </address>
     </header>
 
@@ -60,146 +73,156 @@
       <!-- Hero -->
 
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">
-          <span class="hero-button-text">Order Service</span>
-        </button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">
+            <span class="hero-button-text">Order Service</span>
+          </button>
+        </div>
       </section>
 
       <!-- Features -->
 
-      <section>
-        <h2 hidden class="section-title">features</h2>
-        <ul class="features-list">
-          <li class="features-item">
-            <h3 class="section-subtitle">Strategy</h3>
-            <p class="section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="section-subtitle">Punctuality</h3>
-            <p class="section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="section-subtitle">Diligence</h3>
-            <p class="section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="section-subtitle">Technologies</h3>
-            <p class="section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section-features">
+        <div class="container">
+          <h2 hidden class="section-title">features</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="section-subtitle">Strategy</h3>
+              <p class="section-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="section-subtitle">Punctuality</h3>
+              <p class="section-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="section-subtitle">Diligence</h3>
+              <p class="section-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="section-subtitle">Technologies</h3>
+              <p class="section-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Execution -->
 
-      <section>
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="execution-list">
-          <li class="execution-item">
-            <img
-              class="execution-img"
-              src="./images/monitor.jpg"
-              alt="Design for viewing from the monitor"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="execution-item">
-            <img
-              class="execution-img"
-              src="./images/messenger-design.jpg"
-              alt="Messenger design"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="execution-item">
-            <img
-              class="execution-img"
-              src="./images/telephone.jpg"
-              alt="Phone View Design"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="execution-list">
+            <li class="execution-item">
+              <img
+                class="execution-img"
+                src="./images/monitor.jpg"
+                alt="Design for viewing from the monitor"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="execution-item">
+              <img
+                class="execution-img"
+                src="./images/messenger-design.jpg"
+                alt="Messenger design"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="execution-item">
+              <img
+                class="execution-img"
+                src="./images/telephone.jpg"
+                alt="Phone View Design"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Team -->
 
-      <section>
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/product-designer.jpg"
-              alt="product designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">Mark Guerrero</h3>
-            <p class="section-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/frontend-developer.jpg"
-              alt="frontend developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">Tom Ford</h3>
-            <p class="section-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/marketing.jpg"
-              alt="marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">Camila Garcia</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/ui-designer.jpg"
-              alt="ui designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">Daniel Wilson</h3>
-            <p class="section-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/product-designer.jpg"
+                alt="product designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Mark Guerrero</h3>
+              <p class="section-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/frontend-developer.jpg"
+                alt="frontend developer"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Tom Ford</h3>
+              <p class="section-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/marketing.jpg"
+                alt="marketing"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Camila Garcia</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/ui-designer.jpg"
+                alt="ui designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Daniel Wilson</h3>
+              <p class="section-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
 
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        ><span class="accent">Web</span>Studio</a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo" href="./index.html"
+          ><span class="accent">Web</span>Studio</a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
