Added flexible blocks and side model

--- a/index.html
+++ b/index.html
@@ -30,43 +30,43 @@
     <!-- Navigation -->
 
     <header class="header">
-      <nav class="nav">
-        <div class="container">
-          <a class="logo" href="./index.html"
-            ><span class="accent">Web</span>Studio</a
-          >
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contacts</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <div class="container">
+        <div class="header-container">
+          <nav class="header-nav">
+            <a class="logo" href="./index.html"
+              ><span class="accent">Web</span>Studio</a
+            >
+            <ul class="nav-list header-menu">
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Studio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./portfolio.html">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contacts</a>
+              </li>
+            </ul>
+          </nav>
 
-      <!-- Address -->
+          <!-- Address -->
 
-      <address>
-        <div class="container">
-          <ul class="address-list">
-            <li class="address-item">
-              <a class="address-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a class="address-link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
+          <address>
+            <ul class="address-list header-address">
+              <li class="address-item">
+                <a class="address-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
         </div>
-      </address>
+      </div>
     </header>
 
     <main>
@@ -170,8 +170,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Mark Guerrero</h3>
-              <p class="section-text">Product Designer</p>
+              <div class="employee">
+                <h3 class="section-subtitle">Mark Guerrero</h3>
+                <p class="section-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -181,8 +183,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Tom Ford</h3>
-              <p class="section-text">Frontend Developer</p>
+              <div class="employee">
+                <h3 class="section-subtitle">Tom Ford</h3>
+                <p class="section-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -192,8 +196,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Camila Garcia</h3>
-              <p class="section-text">Marketing</p>
+              <div class="employee">
+                <h3 class="section-subtitle">Camila Garcia</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -203,8 +209,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Daniel Wilson</h3>
-              <p class="section-text">UI Designer</p>
+              <div class="employee">
+                <h3 class="section-subtitle">Daniel Wilson</h3>
+                <p class="section-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
