--- a/portfolio.html
+++ b/portfolio.html
@@ -30,41 +30,43 @@
     <!-- Navigation -->
 
     <header class="header">
-      <nav>
-        <div class="container">
-          <a class="logo" href="./index.html">
-            <span class="accent">Web</span>Studio</a
-          >
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="#">Contacts</a></li>
-          </ul>
-        </div>
-      </nav>
+      <div class="container">
+        <div class="header-container">
+          <nav class="header-nav">
+            <a class="logo" href="./index.html"
+              ><span class="accent">Web</span>Studio</a
+            >
+            <ul class="nav-list header-menu">
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Studio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./portfolio.html">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contacts</a>
+              </li>
+            </ul>
+          </nav>
 
-      <!-- Address -->
+          <!-- Address -->
 
-      <address>
-        <div class="container">
-          <ul class="address-list">
-            <li class="address-item">
-              <a class="address-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a class="address-link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
+          <address>
+            <ul class="address-list header-address">
+              <li class="address-item">
+                <a class="address-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
         </div>
-      </address>
+      </div>
     </header>
 
     <!-- Hero -->
@@ -111,8 +113,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Banking App Interface Concept</h2>
-              <p class="design-text">App</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Banking App Interface Concept</h2>
+                <p class="design-text">App</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -123,8 +127,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Cashless Payment</h2>
-              <p class="design-text">Marketing</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Cashless Payment</h2>
+                <p class="design-text">Marketing</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -136,8 +142,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Meditaion App</h2>
-              <p class="design-text">App</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Meditaion App</h2>
+                <p class="design-text">App</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -148,8 +156,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Taxi Service</h2>
-              <p class="design-text">Marketing</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Taxi Service</h2>
+                <p class="design-text">Marketing</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -160,8 +170,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Screen Illustrations</h2>
-              <p class="design-text">Design</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Screen Illustrations</h2>
+                <p class="design-text">Design</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -173,8 +185,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Online Courses</h2>
-              <p class="design-text">Marketing</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Online Courses</h2>
+                <p class="design-text">Marketing</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -185,8 +199,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Instagram Stories Concept</h2>
-              <p class="design-text">Design</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Instagram Stories Concept</h2>
+                <p class="design-text">Design</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -198,8 +214,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Organic Food</h2>
-              <p class="design-text">Web Site</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Organic Food</h2>
+                <p class="design-text">Web Site</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -210,8 +228,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Fresh Coffee</h2>
-              <p class="design-text">Web Site</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Fresh Coffee</h2>
+                <p class="design-text">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -230,21 +250,6 @@
           digital marketing & growth solutions.
         </p>
       </div>
-    </footer>
-  </body>
-</html>
-
-
-    <!-- Footer -->
-
-    <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        ><span class="accent">Web</span>Studio</a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
     </footer>
   </body>
 </html>
