--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,7 @@
 
     <main>
       <section class="hero-portfolio">
+        <h2 hidden>Search</h2>
         <div class="container">
           <ul class="hero-list">
             <li>
@@ -113,10 +114,8 @@
                 width="360"
                 height="300"
               />
-              <div class="design-examples">
-                <h2 class="design-subtitle">Banking App Interface Concept</h2>
-                <p class="design-text">App</p>
-              </div>
+              <h2 class="design-subtitle">Banking App Interface Concept</h2>
+              <p class="design-text">App</p>
             </li>
             <li class="design-item">
               <img
@@ -127,10 +126,8 @@
                 width="360"
                 height="300"
               />
-              <div class="design-examples">
-                <h2 class="design-subtitle">Cashless Payment</h2>
-                <p class="design-text">Marketing</p>
-              </div>
+              <h2 class="design-subtitle">Cashless Payment</h2>
+              <p class="design-text">Marketing</p>
             </li>
             <li class="design-item">
               <img
@@ -142,10 +139,8 @@
                 width="360"
                 height="300"
               />
-              <div class="design-examples">
-                <h2 class="design-subtitle">Meditaion App</h2>
-                <p class="design-text">App</p>
-              </div>
+              <h2 class="design-subtitle">Meditaion App</h2>
+              <p class="design-text">App</p>
             </li>
             <li class="design-item">
               <img
@@ -156,10 +151,8 @@
                 width="360"
                 height="300"
               />
-              <div class="design-examples">
-                <h2 class="design-subtitle">Taxi Service</h2>
-                <p class="design-text">Marketing</p>
-              </div>
+              <h2 class="design-subtitle">Taxi Service</h2>
+              <p class="design-text">Marketing</p>
             </li>
             <li class="design-item">
               <img
@@ -170,10 +163,8 @@
                 width="360"
                 height="300"
               />
-              <div class="design-examples">
-                <h2 class="design-subtitle">Screen Illustrations</h2>
-                <p class="design-text">Design</p>
-              </div>
+              <h2 class="design-subtitle">Screen Illustrations</h2>
+              <p class="design-text">Design</p>
             </li>
             <li class="design-item">
               <img
@@ -185,10 +176,8 @@
                 width="360"
                 height="300"
               />
-              <div class="design-examples">
-                <h2 class="design-subtitle">Online Courses</h2>
-                <p class="design-text">Marketing</p>
-              </div>
+              <h2 class="design-subtitle">Online Courses</h2>
+              <p class="design-text">Marketing</p>
             </li>
             <li class="design-item">
               <img
@@ -199,10 +188,8 @@
                 width="360"
                 height="300"
               />
-              <div class="design-examples">
-                <h2 class="design-subtitle">Instagram Stories Concept</h2>
-                <p class="design-text">Design</p>
-              </div>
+              <h2 class="design-subtitle">Instagram Stories Concept</h2>
+              <p class="design-text">Design</p>
             </li>
             <li class="design-item">
               <img
@@ -214,10 +201,8 @@
                 width="360"
                 height="300"
               />
-              <div class="design-examples">
-                <h2 class="design-subtitle">Organic Food</h2>
-                <p class="design-text">Web Site</p>
-              </div>
+              <h2 class="design-subtitle">Organic Food</h2>
+              <p class="design-text">Web Site</p>
             </li>
             <li class="design-item">
               <img
@@ -228,10 +213,8 @@
                 width="360"
                 height="300"
               />
-              <div class="design-examples">
-                <h2 class="design-subtitle">Fresh Coffee</h2>
-                <p class="design-text">Web Site</p>
-              </div>
+              <h2 class="design-subtitle">Fresh Coffee</h2>
+              <p class="design-text">Web Site</p>
             </li>
           </ul>
         </div>
