--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,6 @@
 
     <!-- Styles -->
 
-    <link rel="stylesheet" href="./css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -25,6 +24,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Navigation -->
@@ -114,8 +115,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Banking App Interface Concept</h2>
-              <p class="design-text">App</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Banking App Interface Concept</h2>
+                <p class="design-text">App</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -126,8 +129,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Cashless Payment</h2>
-              <p class="design-text">Marketing</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Cashless Payment</h2>
+                <p class="design-text">Marketing</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -139,8 +144,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Meditaion App</h2>
-              <p class="design-text">App</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Meditaion App</h2>
+                <p class="design-text">App</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -151,8 +158,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Taxi Service</h2>
-              <p class="design-text">Marketing</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Taxi Service</h2>
+                <p class="design-text">Marketing</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -163,8 +172,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Screen Illustrations</h2>
-              <p class="design-text">Design</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Screen Illustrations</h2>
+                <p class="design-text">Design</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -176,8 +187,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Online Courses</h2>
-              <p class="design-text">Marketing</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Online Courses</h2>
+                <p class="design-text">Marketing</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -188,8 +201,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Instagram Stories Concept</h2>
-              <p class="design-text">Design</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Instagram Stories Concept</h2>
+                <p class="design-text">Design</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -201,8 +216,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Organic Food</h2>
-              <p class="design-text">Web Site</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Organic Food</h2>
+                <p class="design-text">Web Site</p>
+              </div>
             </li>
             <li class="design-item">
               <img
@@ -213,8 +230,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="design-subtitle">Fresh Coffee</h2>
-              <p class="design-text">Web Site</p>
+              <div class="design-examples">
+                <h2 class="design-subtitle">Fresh Coffee</h2>
+                <p class="design-text">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
