--- a/portfolio.html
+++ b/portfolio.html
@@ -70,14 +70,13 @@
       </div>
     </header>
 
-    <!-- Hero -->
     <!-- Search -->
 
     <main>
-      <section class="hero-portfolio">
-        <h2 hidden>Search</h2>
+      <section class="search-portfolio">
         <div class="container">
-          <ul class="hero-list">
+          <h1 hidden>Design</h1>
+          <ul class="search-list">
             <li>
               <button class="search button-all" type="button">All</button>
             </li>
@@ -98,13 +97,6 @@
               </button>
             </li>
           </ul>
-        </div>
-      </section>
-
-      <!-- Design -->
-      <section class="section section-design">
-        <div class="container">
-          <h1 hidden>Design</h1>
           <ul class="design-list">
             <li class="design-item">
               <img
